// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NumberInput /> should have some hintText 1`] = `
<div
  class="block width_full"
>
  <div
    class="block none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="block width_full height_full"
    >
      <input
        autocomplete="off"
        class="trimmedBlockElement appearance input trimmedBlockElement appearance input display_flex width_full position_relative input_itself_root_base"
        id="id"
        type="number"
        value=""
      />
    </div>
    <div
      class="block display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="inlineText none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_default_base root_base block colours_neutral_base noWrap sizes_4_base placeholder_mutedLabelStyles_base placeholderPlacement_default_base"
          for="id"
        >
          placeholder
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
  <p
    class="blockText textAlign_left root_base blockText fontWeight_normal_base sizes_2_base blockText 2_mobile_base 4_mobile_base hintText_base styleNode_base"
  >
    hint text
  </p>
</div>
`;

exports[`<NumberInput /> should match snapshot 1`] = `
<div
  class="block width_full"
>
  <div
    class="block none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="block width_full height_full"
    >
      <input
        autocomplete="off"
        class="trimmedBlockElement appearance input trimmedBlockElement appearance input display_flex width_full position_relative input_itself_root_base"
        id="id"
        type="number"
        value=""
      />
    </div>
    <div
      class="block display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="inlineText none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_default_base root_base block colours_neutral_base noWrap sizes_4_base placeholder_mutedLabelStyles_base placeholderPlacement_default_base"
          for="id"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<NumberInput /> should match snapshot when active 1`] = `
<div
  class="block width_full input-class"
>
  <div
    class="block none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="block width_full height_full"
    >
      <input
        autocomplete="off"
        class="trimmedBlockElement appearance input trimmedBlockElement appearance input display_flex width_full position_relative input_itself_root_base"
        type="number"
        value=""
      />
    </div>
    <div
      class="block display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base activeBorderColour_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base activeBorderColour_base"
        style="width: 0px;"
      >
        <label
          class="inlineText none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_default_base root_base block colours_neutral_base noWrap sizes_4_base placeholder_mutedLabelStyles_base placeholderPlacement_default_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base activeBorderColour_base"
      />
    </div>
  </div>
</div>
`;

exports[`<NumberInput /> should match snapshot when touched 1`] = `
<div
  class="block width_full input-class"
>
  <div
    class="block none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="block width_full height_full"
    >
      <input
        autocomplete="off"
        class="trimmedBlockElement appearance input trimmedBlockElement appearance input display_flex width_full position_relative input_itself_root_base"
        type="number"
        value=""
      />
    </div>
    <div
      class="block display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="inlineText none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_default_base root_base block colours_neutral_base noWrap sizes_4_base placeholder_mutedLabelStyles_base placeholderPlacement_default_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<NumberInput /> should match snapshot when touched and invalid 1`] = `
<div
  class="block width_full input-class"
>
  <div
    class="block none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="block width_full height_full"
    >
      <input
        autocomplete="off"
        class="trimmedBlockElement appearance input trimmedBlockElement appearance input display_flex width_full position_relative input_itself_root_base"
        type="number"
        value=""
      />
    </div>
    <div
      class="block display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="inlineText none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_default_base root_base block colours_neutral_base noWrap sizes_4_base placeholder_mutedLabelStyles_base placeholderPlacement_default_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<NumberInput /> should match snapshot when touched and valid 1`] = `
<div
  class="block width_full input-class"
>
  <div
    class="block none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="block width_full height_full"
    >
      <input
        autocomplete="off"
        class="trimmedBlockElement appearance input trimmedBlockElement appearance input display_flex width_full position_relative input_itself_root_base"
        type="number"
        value=""
      />
    </div>
    <div
      class="block display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="inlineText none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_default_base root_base block colours_neutral_base noWrap sizes_4_base placeholder_mutedLabelStyles_base placeholderPlacement_default_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<NumberInput /> should match snapshot with both icons 1`] = `
<div
  class="block width_full input-class"
>
  <div
    class="block none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="block width_full height_full"
    >
      <i
        class="display_block medium_mobile_base block position_absolute pointerEvents_none iconRoot_base icon_prefix styleNode_base"
        role="presentation"
      >
        <svg
          class="display_block width_full height_full"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
      <i
        class="display_block medium_mobile_base block position_absolute pointerEvents_none iconRoot_base icon_suffix styleNode_base"
        role="presentation"
      >
        <svg
          class="display_block width_full height_full"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
      <input
        autocomplete="off"
        class="trimmedBlockElement appearance input trimmedBlockElement appearance input display_flex width_full position_relative input_itself_root_base input_itself_prefixed_base input_itself_suffixed_base"
        type="number"
        value=""
      />
    </div>
    <div
      class="block display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="inlineText none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_default_base root_base block colours_neutral_base noWrap sizes_4_base placeholder_mutedLabelStyles_base placeholderPlacement_defaultPrefixed_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<NumberInput /> should match snapshot with prefix icon 1`] = `
<div
  class="block width_full input-class"
>
  <div
    class="block none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="block width_full height_full"
    >
      <i
        class="display_block medium_mobile_base block position_absolute pointerEvents_none iconRoot_base icon_prefix styleNode_base"
        role="presentation"
      >
        <svg
          class="display_block width_full height_full"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
      <input
        autocomplete="off"
        class="trimmedBlockElement appearance input trimmedBlockElement appearance input display_flex width_full position_relative input_itself_root_base input_itself_prefixed_base"
        type="number"
        value=""
      />
    </div>
    <div
      class="block display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="inlineText none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_default_base root_base block colours_neutral_base noWrap sizes_4_base placeholder_mutedLabelStyles_base placeholderPlacement_defaultPrefixed_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;

exports[`<NumberInput /> should match snapshot with suffix icon 1`] = `
<div
  class="block width_full input-class"
>
  <div
    class="block none_mobile_base none_mobile_base none_mobile_base none_mobile_base width_full position_relative root_base"
  >
    <div
      class="block width_full height_full"
    >
      <i
        class="display_block medium_mobile_base block position_absolute pointerEvents_none iconRoot_base icon_suffix styleNode_base"
        role="presentation"
      >
        <svg
          class="display_block width_full height_full"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M183.253 353.707L280.96 256l-97.707-97.92 30.08-30.08 128 128-128 128-30.08-30.293z"
          />
        </svg>
      </i>
      <input
        autocomplete="off"
        class="trimmedBlockElement appearance input trimmedBlockElement appearance input display_flex width_full position_relative input_itself_root_base input_itself_suffixed_base"
        type="number"
        value=""
      />
    </div>
    <div
      class="block display_flex width_full height_full position_absolute textAlign_left pointerEvents_none borderVisualDefaults_base borders_root_default"
    >
      <div
        class="borderRegionDefaults_base borders_leading_base styleNode_base"
      />
      <div
        class="borderRegionDefaults_base borders_middle_base styleNode_base"
        style="width: 0px;"
      >
        <label
          class="inlineText none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base none_mobile_base display_inline position_absolute pointerEvents_none placeholder_default_base root_base block colours_neutral_base noWrap sizes_4_base placeholder_mutedLabelStyles_base placeholderPlacement_default_base"
        >
          placeholder something
        </label>
      </div>
      <div
        class="borderRegionDefaults_base borders_trailing_base styleNode_base"
      />
    </div>
  </div>
</div>
`;
